--- a/JOSE/JOSE.csproj
+++ b/JOSE/JOSE.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="jose-jwt" Version="4.0.1" />
+    <PackageReference Include="CreativeCode.JWS" Version="0.3.0" />
+    <PackageReference Include="jose-jwt" Version="4.1.0" />
   </ItemGroup>
 
 </Project>
