possible bug in cxf-jose

--- a/server/rekvirentRestPort/src/main/resources/jwe/server/server-out-sign.properties
+++ b/server/rekvirentRestPort/src/main/resources/jwe/server/server-out-sign.properties
@@ -9,3 +9,4 @@ rs.security.signature.include.cert=true
 rs.security.key.password=changeit
 rs.security.keystore.alias=server
 rs.security.signature.algorithm=RS256
+rs.security.accept.public.key=true
