--- a/server/rekvirentRestPort/src/main/resources/jwe/server/server.properties
+++ b/server/rekvirentRestPort/src/main/resources/jwe/server/server.properties
@@ -9,4 +9,5 @@ rs.security.keystore.file=jwe/server/server-keystore.jks
 rs.security.encryption.content.algorithm=A256GCM
 #rs.security.encryption.key.algorithm=RSA-OAEP
 rs.security.key.password=changeit
+rs.security.accept.public.key=true
 
