--- a/server/pom.xml
+++ b/server/pom.xml
@@ -21,7 +21,9 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <cxf.version>3.5.5</cxf.version>
     </properties>
+
 
     <dependencies>
         <dependency>
