--- a/server/rekvirentRestPort/pom.xml
+++ b/server/rekvirentRestPort/pom.xml
@@ -15,17 +15,17 @@
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-frontend-jaxrs</artifactId>
-            <version>3.5.5</version>
+            <version>${cxf.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-rs-client</artifactId>
-            <version>3.5.5</version>
+            <version>${cxf.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-transports-http</artifactId>
-            <version>3.5.5</version>
+            <version>${cxf.version}</version>
         </dependency>
         <dependency>
             <groupId>im.haugsdal</groupId>
@@ -57,12 +57,12 @@
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-rs-security-jose</artifactId>
-            <version>3.5.0</version>
+            <version>${cxf.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-rs-security-jose-jaxrs</artifactId>
-            <version>3.5.0</version>
+            <version>${cxf.version}</version>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
