--- a/server/rekvirentRestPort/src/main/resources/jwe/server/server-sign.properties
+++ b/server/rekvirentRestPort/src/main/resources/jwe/server/server-sign.properties
@@ -6,6 +6,7 @@
 rs.security.keystore.type=jks
 rs.security.keystore.password=changeit
 rs.security.keystore.file=jwe/server/server-keystore.jks
+rs.security.keystore.alias=client
 rs.security.accept.public.key=true
-rs.security.signature.include.cert=true
+#rs.security.signature.include.cert=true
 
