--- a/server/pom.xml
+++ b/server/pom.xml
@@ -22,6 +22,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <cxf.version>3.5.5</cxf.version>
+        <testng.version>7.7.0</testng.version>
     </properties>
 
 
