--- a/server/rekvirentSoapPort/pom.xml
+++ b/server/rekvirentSoapPort/pom.xml
@@ -85,7 +85,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.5</version>
+            <version>${testng.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
